@@ -17,6 +17,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+acinclude.m4: Check whether Python supports the "L" format specifier. Do not
+   build python plugin if not.
+Andreas Kirschbaum 2005-03-09
+
 common/{map.c, readable.c, treasure.c}, crossedit/Attr.c, server/{apply.c,
 attack.c, c_wiz.c, init.c, monster.c, pets.c, shop.c, skill_util.c, skills.c,
 spell_attack.c, spell_effect.c, time.c}, socket/{info.c, request.c}: Add
